--- a/内容页面.html
+++ b/内容页面.html
@@ -50,29 +50,29 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u475" class="ax_default _默认样式">
-        <div id="u475_div" class=""></div>
-        <div id="u475_text" class="text " style="display:none; visibility: hidden">
+      <div id="u606" class="ax_default _默认样式">
+        <div id="u606_div" class=""></div>
+        <div id="u606_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- footer (组合) -->
-      <div id="u476" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
+      <div id="u607" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
 
         <!-- Unnamed (矩形) -->
-        <div id="u477" class="ax_default _默认样式">
-          <img id="u477_img" class="img " src="images/登录界面/u21.svg"/>
-          <div id="u477_text" class="text ">
-            <p><span>Copyright © </span><a id="u478" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u479" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
+        <div id="u608" class="ax_default _默认样式">
+          <img id="u608_img" class="img " src="images/登录界面/u21.svg"/>
+          <div id="u608_text" class="text ">
+            <p><span>Copyright © </span><a id="u609" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : </span><a id="u610" class="link" title="点击发送邮件"><span>5698401@qq.com</span></a><span>&nbsp; QQ: 5698401</span></p>
           </div>
         </div>
       </div>
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u480" class="ax_default" data-label="灰色背景">
-        <div id="u480_state0" class="panel_state" data-label="State1" style="">
-          <div id="u480_state0_content" class="panel_state_content">
+      <div id="u611" class="ax_default" data-label="灰色背景">
+        <div id="u611_state0" class="panel_state" data-label="State1" style="">
+          <div id="u611_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
@@ -80,29 +80,29 @@
       <!-- Unnamed (顶部通栏) -->
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u482" class="ax_default" data-label="灰色背景">
-        <div id="u482_state0" class="panel_state" data-label="State1" style="">
-          <div id="u482_state0_content" class="panel_state_content">
+      <div id="u613" class="ax_default" data-label="灰色背景">
+        <div id="u613_state0" class="panel_state" data-label="State1" style="">
+          <div id="u613_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 线条 (动态面板) -->
-      <div id="u483" class="ax_default" data-label="线条">
-        <div id="u483_state0" class="panel_state" data-label="State1" style="">
-          <div id="u483_state0_content" class="panel_state_content">
+      <div id="u614" class="ax_default" data-label="线条">
+        <div id="u614_state0" class="panel_state" data-label="State1" style="">
+          <div id="u614_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 页面标题 (矩形) -->
-      <div id="u484" class="ax_default _默认样式" data-label="页面标题">
-        <div id="u484_div" class=""></div>
-        <div id="u484_text" class="text ">
-          <p><span>课题列表</span></p>
+      <div id="u615" class="ax_default _默认样式" data-label="页面标题">
+        <div id="u615_div" class=""></div>
+        <div id="u615_text" class="text ">
+          <p><span>教师课题管理</span></p>
         </div>
       </div>
-      <div id="u481" style="display:none; visibility:hidden;"></div>
+      <div id="u612" style="display:none; visibility:hidden;"></div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
