--- a/学生查询课题.html
+++ b/学生查询课题.html
@@ -50,29 +50,29 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u385" class="ax_default _默认样式">
-        <div id="u385_div" class=""></div>
-        <div id="u385_text" class="text " style="display:none; visibility: hidden">
+      <div id="u516" class="ax_default _默认样式">
+        <div id="u516_div" class=""></div>
+        <div id="u516_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- footer (组合) -->
-      <div id="u386" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
+      <div id="u517" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
 
         <!-- Unnamed (矩形) -->
-        <div id="u387" class="ax_default _默认样式">
-          <img id="u387_img" class="img " src="images/登录界面/u21.svg"/>
-          <div id="u387_text" class="text ">
-            <p><span>Copyright © </span><a id="u388" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u389" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
+        <div id="u518" class="ax_default _默认样式">
+          <img id="u518_img" class="img " src="images/登录界面/u21.svg"/>
+          <div id="u518_text" class="text ">
+            <p><span>Copyright © </span><a id="u519" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u520" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
           </div>
         </div>
       </div>
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u390" class="ax_default" data-label="灰色背景">
-        <div id="u390_state0" class="panel_state" data-label="State1" style="">
-          <div id="u390_state0_content" class="panel_state_content">
+      <div id="u521" class="ax_default" data-label="灰色背景">
+        <div id="u521_state0" class="panel_state" data-label="State1" style="">
+          <div id="u521_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
@@ -80,177 +80,177 @@
       <!-- Unnamed (顶部通栏) -->
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u392" class="ax_default" data-label="灰色背景">
-        <div id="u392_state0" class="panel_state" data-label="State1" style="">
-          <div id="u392_state0_content" class="panel_state_content">
+      <div id="u523" class="ax_default" data-label="灰色背景">
+        <div id="u523_state0" class="panel_state" data-label="State1" style="">
+          <div id="u523_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 线条 (动态面板) -->
-      <div id="u393" class="ax_default" data-label="线条">
-        <div id="u393_state0" class="panel_state" data-label="State1" style="">
-          <div id="u393_state0_content" class="panel_state_content">
+      <div id="u524" class="ax_default" data-label="线条">
+        <div id="u524_state0" class="panel_state" data-label="State1" style="">
+          <div id="u524_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 页面标题 (矩形) -->
-      <div id="u394" class="ax_default _默认样式" data-label="页面标题">
-        <div id="u394_div" class=""></div>
-        <div id="u394_text" class="text ">
-          <p><span>课题列表</span></p>
+      <div id="u525" class="ax_default _默认样式" data-label="页面标题">
+        <div id="u525_div" class=""></div>
+        <div id="u525_text" class="text ">
+          <p><span>教师课题管理</span></p>
         </div>
       </div>
-      <div id="u391" style="display:none; visibility:hidden;"></div>
+      <div id="u522" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (表格) -->
-      <div id="u395" class="ax_default">
+      <div id="u526" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u396" class="ax_default table_cell">
-          <img id="u396_img" class="img " src="images/学生查询课题/u396.png"/>
-          <div id="u396_text" class="text ">
+        <div id="u527" class="ax_default table_cell">
+          <img id="u527_img" class="img " src="images/学生查询课题/u527.png"/>
+          <div id="u527_text" class="text ">
             <p><span>课题1</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u397" class="ax_default table_cell">
-          <img id="u397_img" class="img " src="images/学生查询课题/u396.png"/>
-          <div id="u397_text" class="text ">
+        <div id="u528" class="ax_default table_cell">
+          <img id="u528_img" class="img " src="images/学生查询课题/u527.png"/>
+          <div id="u528_text" class="text ">
             <p><span style="text-decoration:underline ;">xxx</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u398" class="ax_default table_cell">
-          <img id="u398_img" class="img " src="images/学生查询课题/u396.png"/>
-          <div id="u398_text" class="text ">
+        <div id="u529" class="ax_default table_cell">
+          <img id="u529_img" class="img " src="images/学生查询课题/u527.png"/>
+          <div id="u529_text" class="text ">
             <p><span>2017-10-9</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u399" class="ax_default table_cell">
-          <img id="u399_img" class="img " src="images/学生查询课题/u396.png"/>
-          <div id="u399_text" class="text ">
+        <div id="u530" class="ax_default table_cell">
+          <img id="u530_img" class="img " src="images/学生查询课题/u527.png"/>
+          <div id="u530_text" class="text ">
             <p><span>3</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u400" class="ax_default table_cell">
-          <img id="u400_img" class="img " src="images/学生查询课题/u396.png"/>
-          <div id="u400_text" class="text ">
+        <div id="u531" class="ax_default table_cell">
+          <img id="u531_img" class="img " src="images/学生查询课题/u527.png"/>
+          <div id="u531_text" class="text ">
             <p><span>可选</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u401" class="ax_default table_cell">
-          <img id="u401_img" class="img " src="images/学生查询课题/u401.png"/>
-          <div id="u401_text" class="text ">
+        <div id="u532" class="ax_default table_cell">
+          <img id="u532_img" class="img " src="images/学生查询课题/u532.png"/>
+          <div id="u532_text" class="text ">
             <p><span style="text-decoration:underline ;">查看</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u402" class="ax_default table_cell">
-          <img id="u402_img" class="img " src="images/学生查询课题/u402.png"/>
-          <div id="u402_text" class="text ">
+        <div id="u533" class="ax_default table_cell">
+          <img id="u533_img" class="img " src="images/学生查询课题/u533.png"/>
+          <div id="u533_text" class="text ">
             <p><span>课题2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u403" class="ax_default table_cell">
-          <img id="u403_img" class="img " src="images/学生查询课题/u402.png"/>
-          <div id="u403_text" class="text ">
+        <div id="u534" class="ax_default table_cell">
+          <img id="u534_img" class="img " src="images/学生查询课题/u533.png"/>
+          <div id="u534_text" class="text ">
             <p><span style="text-decoration:underline ;">xxx</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u404" class="ax_default table_cell">
-          <img id="u404_img" class="img " src="images/学生查询课题/u402.png"/>
-          <div id="u404_text" class="text ">
+        <div id="u535" class="ax_default table_cell">
+          <img id="u535_img" class="img " src="images/学生查询课题/u533.png"/>
+          <div id="u535_text" class="text ">
             <p><span>2018-10-9</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u405" class="ax_default table_cell">
-          <img id="u405_img" class="img " src="images/学生查询课题/u402.png"/>
-          <div id="u405_text" class="text ">
+        <div id="u536" class="ax_default table_cell">
+          <img id="u536_img" class="img " src="images/学生查询课题/u533.png"/>
+          <div id="u536_text" class="text ">
             <p><span>4</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u406" class="ax_default table_cell">
-          <img id="u406_img" class="img " src="images/学生查询课题/u402.png"/>
-          <div id="u406_text" class="text ">
+        <div id="u537" class="ax_default table_cell">
+          <img id="u537_img" class="img " src="images/学生查询课题/u533.png"/>
+          <div id="u537_text" class="text ">
             <p><span>锁定</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u407" class="ax_default table_cell">
-          <img id="u407_img" class="img " src="images/学生查询课题/u407.png"/>
-          <div id="u407_text" class="text ">
+        <div id="u538" class="ax_default table_cell">
+          <img id="u538_img" class="img " src="images/学生查询课题/u538.png"/>
+          <div id="u538_text" class="text ">
             <p><span style="text-decoration:underline ;">查看</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u408" class="ax_default">
+      <div id="u539" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u409" class="ax_default table_cell">
-          <img id="u409_img" class="img " src="images/学生查询课题/u409.png"/>
-          <div id="u409_text" class="text ">
+        <div id="u540" class="ax_default table_cell">
+          <img id="u540_img" class="img " src="images/学生查询课题/u540.png"/>
+          <div id="u540_text" class="text ">
             <p><span>课题名称</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u410" class="ax_default table_cell">
-          <img id="u410_img" class="img " src="images/学生查询课题/u409.png"/>
-          <div id="u410_text" class="text ">
+        <div id="u541" class="ax_default table_cell">
+          <img id="u541_img" class="img " src="images/学生查询课题/u540.png"/>
+          <div id="u541_text" class="text ">
             <p><span>指导老师</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u411" class="ax_default table_cell">
-          <img id="u411_img" class="img " src="images/学生查询课题/u409.png"/>
-          <div id="u411_text" class="text ">
+        <div id="u542" class="ax_default table_cell">
+          <img id="u542_img" class="img " src="images/学生查询课题/u540.png"/>
+          <div id="u542_text" class="text ">
             <p><span>结束时间</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u412" class="ax_default table_cell">
-          <img id="u412_img" class="img " src="images/学生查询课题/u409.png"/>
-          <div id="u412_text" class="text ">
+        <div id="u543" class="ax_default table_cell">
+          <img id="u543_img" class="img " src="images/学生查询课题/u540.png"/>
+          <div id="u543_text" class="text ">
             <p><span>已选人数</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u413" class="ax_default table_cell">
-          <img id="u413_img" class="img " src="images/学生查询课题/u409.png"/>
-          <div id="u413_text" class="text ">
+        <div id="u544" class="ax_default table_cell">
+          <img id="u544_img" class="img " src="images/学生查询课题/u540.png"/>
+          <div id="u544_text" class="text ">
             <p><span>状态</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u414" class="ax_default table_cell">
-          <img id="u414_img" class="img " src="images/学生查询课题/u414.png"/>
-          <div id="u414_text" class="text ">
+        <div id="u545" class="ax_default table_cell">
+          <img id="u545_img" class="img " src="images/学生查询课题/u545.png"/>
+          <div id="u545_text" class="text ">
             <p><span>查看详细</span></p>
           </div>
         </div>
